Alignment fixes

--- a/stylesheets/resumecards.scss
+++ b/stylesheets/resumecards.scss
@@ -406,6 +406,7 @@ script + p {
 
   + .resume-baseinfo {
     margin-left: 140px;
+    padding-left: 80px;
   }
 }
 
